syntax = "proto3";

package ariand.v1;

import "ariand/v1/enums.proto";
import "ariand/v1/user.proto";
import "google/protobuf/timestamp.proto";
import "google/type/money.proto";

option go_package = "ariand/gen/go/ariand/v1;ariandv1";

// Financial account
message Account {
  int64 id = 1;
  string owner_id = 2; // UUID of the owner
  string name = 3;
  string bank = 4;
  AccountType type = 5;
  google.type.Money anchor_balance = 6;
  google.protobuf.Timestamp anchor_date = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  optional string alias = 10;
  
  // Additional fields for API responses
  bool is_owner = 11; // true if requesting user is the owner
  optional User owner = 12; // populated in some contexts
}

// Account collaborator
message AccountCollaborator {
  User user = 1;
  google.protobuf.Timestamp added_at = 2;
}

// User's collaboration on an account
message AccountCollaboration {
  int64 account_id = 1;
  string account_name = 2;
  string bank = 3;
  google.protobuf.Timestamp added_at = 4;
  User owner = 5;
}

// Account balance snapshot
message AccountBalance {
  int64 id = 1;
  string name = 2;
  AccountType account_type = 3;
  google.type.Money current_balance = 4;
  string currency = 5;
}