syntax = "proto3";

package ariand.v1;

import "ariand/v1/enums.proto";
import "google/protobuf/timestamp.proto";
import "google/type/date.proto";
import "google/type/money.proto";

option go_package = "ariand/gen/go/ariand/v1;ariandv1";

// Receipt item
message ReceiptItem {
  int64 id = 1;
  int64 receipt_id = 2;
  optional int32 line_number = 3;
  string name = 4;
  double quantity = 5;
  optional google.type.Money unit_price = 6;
  optional google.type.Money line_total = 7;
  optional string sku = 8;
  optional string category_hint = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

// Receipt
message Receipt {
  int64 id = 1;
  ReceiptEngine engine = 2;
  ReceiptParseStatus parse_status = 3;
  ReceiptLinkStatus link_status = 4;
  repeated int64 match_ids = 5;

  // extracted fields
  optional string merchant = 6;
  optional google.type.Date purchase_date = 7;
  optional google.type.Money total_amount = 8;
  optional google.type.Money tax_amount = 9;

  // location
  optional double lat = 10;
  optional double lon = 11;
  optional string location_source = 12;
  optional string location_label = 13;

  // storage
  optional string image_url = 14;
  optional bytes image_sha256 = 15;
  
  // payloads
  optional string raw_payload = 16;    // JSON
  optional string canonical_data = 17;  // JSON

  // timestamps & items
  google.protobuf.Timestamp created_at = 18;
  google.protobuf.Timestamp updated_at = 19;
  repeated ReceiptItem items = 20;
}

// Receipt with match count
message ReceiptMatchCandidate {
  Receipt receipt = 1;
  int64 potential_matches = 2;
}